--- a/config/buildspec.yml
+++ b/config/buildspec.yml
@@ -26,12 +26,11 @@ phases:
 
       - mkdir -p app
       - cd app
-      - curl https://releases.hashicorp.com/terraform/1.5.5/terraform_1.5.5_linux_arm64.zip
+      - curl -o terraform_1.5.5_linux_arm64.zip https://releases.hashicorp.com/terraform/1.5.5/terraform_1.5.5_linux_arm64.zip
       - unzip terraform_1.5.5_linux_arm64.zip
       - chmod 755 terraform
       - cd ..
       - printf 'yes' | app/terraform init -backend-config="bucket=$bucket" -backend-config="region=$region" -backend-config="key=$key"
       - app/terraform workspace list      
       - app/terraform workspace select $branch || app/terraform workspace new $branch
-      - app/terraform apply --auto-approve -var "app_name=$app_name" -var "region=$region" 
- 
+      - app/terraform apply --auto-approve -var "app_name=$app_name" -var "region=$region"
