--- a/code/lambda/package.json
+++ b/code/lambda/package.json
@@ -22,6 +22,6 @@
         "graphql-tag": "^2.10.4",
         "jwt-decode": "^3.1.2",
         "node-fetch": "^2.6.0",
-        "uuidv4": "^6.2.11",
+        "uuidv4": "^6.2.11"
     }
 }
