--- a/config/buildspec.yml
+++ b/config/buildspec.yml
@@ -7,6 +7,10 @@ env:
     key: "$key"
     branch: "$branch"
     app_name: "$app_name"
+    partition_key: "$partition_key"
+    sort_key: "$sort_key"
+    columns: "$columns"
+    indexes: "$indexes"
 
 phases:
   build:
@@ -33,4 +37,4 @@ phases:
       - printf 'yes' | app/terraform init -backend-config="bucket=$bucket" -backend-config="region=$region" -backend-config="key=$key"
       - app/terraform workspace list      
       - app/terraform workspace select $branch || app/terraform workspace new $branch
-      - app/terraform apply --auto-approve -var "app_name=$app_name" -var "region=$region"
+      - app/terraform apply --auto-approve -var "app_name=$app_name" -var "region=$region" -var "partition_key=$partition_key" -var "sort_key=$sort_key" -var "columns=$columns" -var "indexes=$indexes"
