--- a/code/lambda/tsconfig.json
+++ b/code/lambda/tsconfig.json
@@ -12,6 +12,6 @@
             "./node_modules/@types"
           ]
     },
-    "include": ["src/**/*", "index.js"],
+    "include": ["src/**/*", "index.js", "global.d.ts"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
