--- a/config/buildspec_delete.yml
+++ b/config/buildspec_delete.yml
@@ -7,6 +7,10 @@ env:
     key: "$key"
     branch: "$branch"
     app_name: "$app_name"
+    partition_key: "$partition_key"
+    sort_key: "$sort_key"
+    columns: "$columns"
+    indexes: "$indexes"
 
 phases:
   build:
@@ -18,7 +22,11 @@ phases:
       - unzip terraform_1.5.5_linux_arm64.zip
       - chmod 755 terraform
       - cd ..
+      
+      - touch placeholder.txt
+      - zip -r lambda_code.zip placeholder.txt
+      
       - printf 'yes' | app/terraform init -backend-config="bucket=$bucket" -backend-config="region=$region" -backend-config="key=$key"
       - app/terraform workspace list      
       - app/terraform workspace select $branch || app/terraform workspace new $branch
-      - app/terraform destroy --auto-approve -var "app_name=$app_name" -var "region=$region"
+      - app/terraform destroy --auto-approve -var "app_name=$app_name" -var "region=$region" -var "partition_key=$partition_key" -var "sort_key=$sort_key" -var "columns=$columns" -var "indexes=$indexes"
